Fix card overflow bug

--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -25,6 +25,7 @@
 .card__content {
   padding: 1em;
   line-height: 150%; 
+  overflow-wrap: break-word;
 }
 
 .card__img {
